Fix white overflow of value inputs
(#1307)

--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -2163,6 +2163,7 @@ input[type="text"].value-language,
 
     #resource-values div.value {
         display: flex;
+        align-items: flex-start;
     }
 
     .value {
